#
# Copyright (c) 2017 Thorsten Kukuk, Germany
#
# Author: Thorsten Kukuk <kukuk@suse.de>
#
AUTOMAKE_OPTIONS = 1.6 foreign check-news dist-bzip2
#
SUBDIRS = sbin man systemd plugins dracut grub

CLEANFILES = *~

M4_FILES = m4/jh_path_xml_catalog.m4

EXTRA_DIST = ChangeLog $(M4_FILES) README.md

ACLOCAL_AMFLAGS = -I m4
